[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysb-units"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "pysb>=1.15.0",
  "sympy>=1.11.1",
  "astropy>=5.3.4",
]
authors = [
  {name = "Blake A. Wilson", email = "blakeaw1102@gmail.com"},
]
description = "PySB add-on providing utilities to add units to models."
readme = "README.md"
keywords = ["pysb", "biomodels", "reaction models", "systems biology"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Intended Audience
  "Intended Audience :: Science/Research",

  # Topics
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD License",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/Borealis-BioModeling/pysb-units"
Issues = "https://github.com/Borealis-BioModeling/pysb-units/issues"
Changelog = "https://github.com/Borealis-BioModeling/pysb-units/blob/master/CHANGELOG.md"

# Find namespace package
[tool.setuptools.packages.find]
where = ["src"]
include = ["pysb.units",
           "pysb.units.core",
           "pysb.units.unitdefs",
           "pysb.units.examples",
           "pysb.units.examples.bngwiki_simple",
           "pysb.units.examples.jnk3_no_ask1",
           ]
namespaces = true

# Set the dynamic version
[tool.setuptools.dynamic]
version = {attr = "pysb.units.__version__"}
